--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Amiri:400,700|Cardo:400,700" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,7 +22,6 @@
   }
   h2 {
       font-size: 24px;
-      text-transform: uppercase;
       color: #303030;
       font-weight: 600;
       margin-bottom: 30px;
@@ -37,7 +37,7 @@
       background-color: #ffdae9;
       color: #fff;
       padding: 100px 25px;
-      font-family: Rozha One, sans-serif;
+      font-family: Cardo, sans-serif;
   }
   .container-fluid {
       padding: 60px 50px;
