--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
   <a href="#myPage" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a>
-  <p>CODE WITH<a class="fa fa-heart"></a>BY MARIA ELISA</p>
+  <p>DESIGN + CODE WITH<a class="fa fa-heart"></a>by M.E</p>
+
 </footer>
 
 <script>
