--- a/index.html
+++ b/index.html
@@ -285,10 +285,10 @@
   <h2>Work Experience</h2>
   
   <h5><strong><i>Marketing</i></strong>, PT. Kohyei Indonesia, March 2017 - Sept 2017</h5>
-  <h5>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</h5>
+  <h5>A trading company engaged in chemicals, rubbers, plastics, industrial materials, coatings, and adhesives. As marketing and interpreter for Mandarin to Indonesian and vice versa, my responsibilities are <u>creating and identifying potential new clients and suppliers, coordinating business correspondence and mailing lists, processing orders, quotation and invoices and working with suppliers and vendors.</u> </h5>
   
   <h5><strong><i>Undergraduate Researcher</strong></i>, South China University of Technology, March 2014 - June 2014</h5>
-  <h5>Project research: mobile map services. My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</h5>
+  <h5>Project research: <u>mobile map services.</u> My research purpose are to get familiar and develop mobile location service feature for Android platform, improve the quality implementation of location-based mobile service</h5>
   
 </div>
 
