--- a/index.html
+++ b/index.html
@@ -6,219 +6,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-<link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Lora:400,400i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cardo:400,700|Lora:400,400i,700,700i" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-  <style>
-  body {
-      font: 400 15px Lora, sans-serif;
-      line-height: 1.8;
-      color: #818181;
-  }
-  h2 {
-      font-size: 24px;
-      color: #303030;
-      font-weight: 600;
-      margin-bottom: 30px;
-  }
-  h4 {
-      font-size: 19px;
-      line-height: 1.375em;
-      color: #303030;
-      font-weight: 400;
-      margin-bottom: 30px;
-  }  
   
-    h5 {
-      font-size: 18px;
-      line-height: 1.375em;
-      color: #303030;
-      font-weight: 400;
-      margin-bottom: 30px;
-  } 
-  
-  .jumbotron {
-      background-color: #ffdae9;
-      color: #fff;
-      padding: 100px 25px;
-      font-family: Cardo, sans-serif;
-  }
-  .container-fluid {
-      padding: 60px 50px;
-  }
-  .bg-pink {
-      background-color: #ffdae9;
-  }
-  
-  .bg-mint {
-      background-color: #deffee;
-  }
-  
-   .bg-blue {
-      background-color: #dbe4ff;
-  }
-  
-  .bg-purple {
-      background-color: #f0dbff;
-  }
-
-  .fa {
-  padding: 4px;
-  font-size: 27px;
-  width: 33px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-  border-radius: 50%;
-  }
-
-  .fa:hover {
-    opacity: 0.7;
-  }
-  
-  .fa-envelope {
-  color: #fff;
-  }
-
-  .fa-instagram {
-  color: #fff;
-  }
-
-  .fa-twitter {
-  color: #fff;
-  }
-
- .fa-github {
-  color: #fff;
- }
-
- .fa-linkedin {
-  color: #fff;
- }
-
- .fa-google {
-   color: #fff;
- }
-
- .fa-tumblr {
-  color: #fff;
- }
-
- .fa-pinterest {
-  color: #fff;
- }
- 
-  .fa-file {
-  color: #fff;
- }
- 
-   .fa-heart {
-  color: #dc143c;
-  font-size: 17px;
- }
- 
-  .thumbnail {
-      padding: 0 0 15px 0;
-      border: none;
-      border-radius: 0;
-  }
-  .thumbnail img {
-      width: 100%;
-      height: 100%;
-      margin-bottom: 10px;
-  }
-  
-  .item h4 {
-      font-size: 19px;
-      line-height: 1.375em;
-      font-weight: 400;
-      font-style: italic;
-      margin: 70px 0;
-  }
-  .item span {
-      font-style: normal;
-  }
- 
-  .navbar {
-      margin-bottom: 0;
-      background-color: #ffdae9;
-      z-index: 9999;
-      border: 0;
-      font-size: 12px !important;
-      line-height: 1.42857143 !important;
-      letter-spacing: 4px;
-      border-radius: 0;
-      font-family: Montserrat, sans-serif;
-  }
-  .navbar li a, .navbar .navbar-brand {
-      color: #fff !important;
-  }
-  .navbar-nav li a:hover, .navbar-nav li.active a {
-      color: #ffdae9 !important;
-      background-color: #fff !important;
-  }
-  .navbar-default .navbar-toggle {
-      border-color: transparent;
-      color: #fff !important;
-  }
-  footer .glyphicon {
-      font-size: 20px;
-      margin-bottom: 20px;
-      color: #818181;
-  }
-  
-  .progress-bar-custom {
-  background-color: #e6ccff;
-  }
-  
-  .slideanim {visibility:hidden;}
-  .slide {
-      animation-name: slide;
-      -webkit-animation-name: slide;
-      animation-duration: 1s;
-      -webkit-animation-duration: 1s;
-      visibility: visible;
-  }
-  @keyframes slide {
-    0% {
-      opacity: 0;
-      transform: translateY(70%);
-    } 
-    100% {
-      opacity: 1;
-      transform: translateY(0%);
-    }
-  }
-  @-webkit-keyframes slide {
-    0% {
-      opacity: 0;
-      -webkit-transform: translateY(70%);
-    } 
-    100% {
-      opacity: 1;
-      -webkit-transform: translateY(0%);
-    }
-  }
-  @media screen and (max-width: 768px) {
-    .col-sm-4 {
-      text-align: center;
-      margin: 25px 0;
-    }
-    .btn-lg {
-        width: 100%;
-        margin-bottom: 35px;
-    }
-  }
-  @media screen and (max-width: 480px) {
-    .logo {
-        font-size: 150px;
-    }
-  }
-  </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
@@ -248,7 +43,7 @@
 <img src="img/profile-me.jpg" class="img-circle person" width="255" height="255">
   <h1>Maria Elisa</h1>
   
-  <!-- Add font awesome icons -->
+  <!-- Add awesome icons -->
 <a href="mailto:maria_el25@yahoo.com" class="fa fa-envelope"></a>
 <a href="https://instagram.com/mariaelisalisa" class="fa fa-instagram"></a>
 <a href="http://twitter.com/hellomariaelisa" class="fa fa-twitter"></a>
@@ -279,7 +74,7 @@
     </div>    
 
 <!-- Container (Experience Section) -->
-<div id="experience" class="container-fluid text-center bg-grey">
+<div id="experience" class="container-fluid text-center">
   <h2>Work Experience</h2>
   
   <h5><strong><i>Marketing</i></strong>, PT. Kohyei Indonesia, March 2017 - Sept 2017</h5>
@@ -307,7 +102,7 @@
     <div class="progress-bar progress-bar-custom" style="width:30%"></div>
   </div><br>
   
-  <h4><strong>HTML & CSS</strong></h4>
+  <h4><strong>HTML &amp; CSS</strong></h4>
   <div class="progress">
     <div class="progress-bar progress-bar-custom" style="width:70%"></div>
   </div><br>
@@ -348,7 +143,7 @@
    
 
 <!-- Container (Project Section) -->
-<div id="project" class="container-fluid bg-grey">
+<div id="project" class="container-fluid">
   <h2 class="text-center">Projects</h2>
   
      <div class="row text-center slideanim">
